# r9k

./: CMakeLists.txt  Makefile  Makefile.build  README
b64/: b64.c  base64.c  base64.h
calc/: calc.c
clip/: clip.c
gateway/: CMakeLists.txt  Makefile  client.c  client.h  config.h  conn.c  conn.h  connection.h  eim.c  eim.h  ev_poll.c  ev_poll.h  evloop.c  evloop.h  evlp.c  evlp.h  fip.c  fip.h  gateway.c  gateway.h  icp.c  icp.h  iomux.c  iomux.h  ipc.c  ipc.h  log.c  log.h  main.c  reactor.c  reactor.h  server.c  server.h  socket.c  socket.h
gateway/io/: buffer.c  buffer.h  cntl.h  connection.c  connection.h  evlp.c  evlp.h  io_cntl.c  io_cntl.h  socket.c  socket.h  transport.c  transport.h
gateway/utils/: cntl.c  endian.h  hashtable.c  hashtable.h  log.c  log.h
include/carmory/: array.h  error.h
include/minix/: compiler_attrs.h  error.h
include/r9k/: array.h  compiler_attrs.h  error.h  panic.h
misc/: CMakeLists.txt  Makefile  misc.c
rsh/: rsh.c
strc/: strc.c
streq/: CMakeLists.txt  Makefile  streq.c
test/readline/: CMakeLists.txt  Makefile  readline.c
tools/: CMakeLists.txt  Makefile  argparse.c  io_utils.c  list.c  md5.c  readline.c  string.c  yyjson.c
tools/include/carmory/: argparse.h  readline.h  size.h  string.h
tools/include/minix/: io_utils.h
tools/include/r9k/: argparse.h  io_utils.h  readline.h  size.h  string.h  trace.h
tools/include/r9k/ssl/: md5.h
url/: url.c
